# cookbook

./: .env  .gitignore  .pnp.cjs  .prettierignore  Dockerfile  README.md  fly.toml  middleware.ts  next.config.js  package-lock.json  package.json  process.d.ts  start.sh  tailwind.config.js  tsconfig.json
.github/workflows/: deploy-client.yml  deploy.yml
api/: read.js  write.js
app/: root.tsx  singleton.server.ts  utils.ts
app/components/: Footer.tsx  Header.tsx  deleteModal.tsx  paginator.tsx
app/models/: recipe.server.ts  user.server.ts
app/routes/: _index.tsx  api.upload-image.ts  healthcheck.tsx  login.tsx  recipes.$id.tsx  recipes._index.tsx  recipes.edit.$id.tsx  recipes.new.tsx  recipes.search.tsx
client/: package-lock.json  package.json
client/prisma/: schema.prisma
client/process-text-recipes/: main.py
components/: deleteModal.tsx  editRecipe.tsx  footer.tsx  header.tsx  layout.tsx  newRecipe.tsx  paginator.tsx  recipeSearchBar.tsx  searchBar.tsx
components/forms/: categoriesInput.tsx  descriptionInput.tsx  index.ts  titleInput.tsx
components/menuGrid/: index.tsx  (+1 more)
emails/: confirm-email.html  welcome.html
functions/: project.yml
interfaces/: Ingredient.ts
lib/: database.types.ts  ingredients.ts  menus.ts  prisma.ts  recipes.ts  supabase-server.ts
pages/: _app.tsx  blog.tsx  index.tsx  menu.tsx  new-recipe.tsx  search.tsx
prisma/: schema.prisma  seed.ts
process-text-recipes/: main.py  pyproject.toml  recipe.py  schema.prisma
supabase/: config.toml
types/: Ingredient.ts  recipe.ts  supabase.ts
workflows/: deploy.yml
(+70 files in other folders)
