[tool.poetry]
name = "process-text-recipes"
version = "0.1.0"
description = ""
authors = ["Trevor Huis in 't Veld <trevorhuis@bithuis.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
